# Projects

AI/Autonomous Driving using A3C (Actor-Critic Reinforcement Learning)/: self_driving_car_A3C.py
AI/Deep Reinforcement Learning – DQN LunarLander Agent/: Atari Games Lunar Landing by DQN .py
Agentic_AI/cognitive_guardian/: README.md  app.py  main.py  requirements.txt  ui.py
Agentic_Cognitive_Guardian_/: README.md  graph.py  streamlit_app.py  user_memory.json
Agentic_Cognitive_Guardian_/agents/: gatekeeper.py  llm_client.py  recommender.py  scorer.py  semantic_listener.py
Agentic_Cognitive_Guardian_/schemas/: decision.py
Agentic_MultiModal_RAG/: README.md  pyproject.toml  requirements.txt
Agentic_MultiModal_RAG/backend/: main.py
Agentic_MultiModal_RAG/backend/agents/: agentic_rag.py
Agentic_MultiModal_RAG/backend/routes/: query.py
Agentic_MultiModal_RAG/backend/services/: rag_chain.py  retriever.py
Agentic_MultiModal_RAG/backend/vectorstore/: chroma_client.py
Agentic_MultiModal_RAG/chroma_db/: chroma.sqlite3
Agentic_MultiModal_RAG/frontend/: agentic_system.py  planner_agent.py  streamlit_app.py
Fraud_Intelligence_System_ML_LLM_HITL/: README.md
ML/Fraud Intelligence System/: main.py  pyproject.toml  requirements.txt
ML/Fraud Intelligence System/api/: app.py
ML/Fraud Intelligence System/feedback/: feedback.db
ML/Fraud Intelligence System/models/: iso.pkl
ML/Fraud Intelligence System/src/: data_loader.py  explain.py  monitoring.py  risk.py  target_definition.py
MultiModal_RAG/: pyproject.toml  requirements.txt
(+38 files in other folders)
