[project]
name = "fraud-intelligence-system"
version = "0.1.0"
description = "Human-in-the-loop adaptive fraud detection system"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.110",
    "langchain>=0.1.16",
    "matplotlib>=3.10.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "uvicorn>=0.27",
    "xgboost>=2.0",
]


[tool.uv]
